@@ -1,8 +1,5 @@
 #!/bin/sh
 
-# Automake version.
-AM_VERSION_SUFFIX=-1.10
-
 echo Cleaning autotools files...
 find -type d -name autom4te.cache -print0 | xargs -0 rm -rf \;
 find -type f \( -name missing -o -name install-sh -o -name mkinstalldirs \
@@ -16,11 +13,7 @@ cp /usr/share/misc/config.sub .
 cp /usr/share/misc/config.guess .
 cp /usr/share/gettext/config.rpath .
 
-libtoolize --force --copy
-autoheader
-aclocal$AM_VERSION_SUFFIX 
-automake$AM_VERSION_SUFFIX --add-missing --copy --force-missing --foreign
-autoconf
-autoheader
-#autoreconf
+echo Creating autotools files...
+mkdir -p m4
+autoreconf --force --install
 
